# sample_cpp

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.cpp
src/: DisplayImage.cpp  DisplayImage.hpp  Example.cpp  Example.hpp  ImageAlign.cpp  ImageAlign.hpp  ImageReader.hpp  OpenCVUtils.cpp  OpenCVUtils.hpp  ROIReader.cpp  ROIReader.hpp
test/: CMakeLists.txt  ExampleTest.cpp
